--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -9,20 +9,23 @@
       <p class="text-center lead">Faça login ou crie sua conta abaixo</p>
 
       <%- include('includes/messages') %> 
-
+      
       <div class="row text-center">
+
         <div class="col-6">
           <h4>Crie sua conta</h4>
           <p>se ainda nao tem conta crie uma, preencha o formulario:</p>
-          <form action="/login/register" method="POST">
+          <form class="form-cadastro" action="/login/register" method="POST">
             <input type="hidden" name="_csrf" value= <%= csrfToken %> />
             <div class="form-group">
               <label>Email</label>
               <input type="email" class="form-control" name="email" />
+              <small></small>
             </div>
             <div class="form-group">
               <label>Password</label>
               <input type="password" class="form-control" name="password" />
+              <small></small>
             </div>
             <button type="submit" class="btn btn-primary">Criar Conta</button>
           </form>
@@ -31,15 +34,17 @@
         <div class="col-6">
           <h4>Fazer Login</h4>
           <p>se voçe ja tem conta, faça login abaixo:</p>
-          <form action="/login/login" method="POST">
+          <form class="form-login" action="/login/login" method="POST">
             <input type="hidden" name="_csrf" value= <%= csrfToken %> /> 
             <div class="form-group">
               <label>Email</label>
               <input type="email" class="form-control" name="email" />
+              <small></small>
             </div>
             <div class="form-group">
               <label>Password</label>
               <input type="password" class="form-control" name="password" />
+              <small></small>
             </div>
             <button type="submit" class="btn btn-primary">login</button>
           </form>
