--- a/src/views/contacto.ejs
+++ b/src/views/contacto.ejs
@@ -35,7 +35,7 @@
             <input value=<%= contacto.telefone %> type="number" class="form-control" name="telefone" />
           </div>
             
-          <button type="submit" class="btn btn-primary">Adicionar</button>
+          <button type="submit" class="btn add-btn">Adicionar</button>
           
         </form>
       
