--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -1,13 +1,124 @@
 :root {
-    --error-color: #dc3545;
-    --success-color: #28a745;
-    --warning-color: #ffc107;
+  --error-color: #dc3545;
+  --success-color: #28a745;
+  --warning-color: #ffc107;
+}
+
+body {
+  background-color: rgb(215, 215, 215);
+  color: #2a9d8f;
+}
+
+/* INDEX PAGE */
+
+.table {
+  color: rgb(215, 215, 215);
+  background-color: #264653;
+}
+
+.edit-btn {
+  background-color: #2a9d8f;
+}
+
+.del-btn {
+  background-color: #e75951;
+}
+
+/* LOGIN PAGE */
+.pg-title {
+  font-size: 2rem;
+}
+
+.p-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 .form-group.error input {
-    border-color: var(--error-color);
+  border: 2px;
+  border-color: var(--error-color);
 }
 
 .form-group.success input {
-    border-color: var(--success-color);
+  border-color: var(--success-color);
+}
+
+.formContainer {
+  width: 840px;
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+.criarForm {
+  color: rgb(215, 215, 215);
+  margin: 5px 5px !important;
+  padding: 5px 18px;
+  background-color: #264653;
+  border: 5px outset #e76f51;
+  border-radius: 6px 6px 6px 6px;
+
+  -webkit-box-shadow: -5px 6px 15px 9px #264653;
+  box-shadow: -5px 6px 15px 9px #264653;
+}
+
+.criarForm p {
+  color: rgb(215, 215, 215);
+  font-size: 0.9rem;
+}
+
+.criarForm button {
+  margin-top: 10px;
+  color: rgb(215, 215, 215);
+  background-color: #e76f51 !important;
+}
+
+.criarForm:hover {
+  background-color: #2a4f5e;
+}
+
+.logarForm {
+  color: rgb(215, 215, 215);
+  margin: 5px 5px !important;
+  padding: 5px 18px;
+  background-color: #264653;
+  border: 5px outset #e76f51;
+  border-radius: 6px 6px 6px 6px;
+
+  -webkit-box-shadow: -5px 6px 15px 9px #264653;
+  box-shadow: -5px 6px 15px 9px #264653;
+}
+.logarForm button {
+  margin-top: 10px;
+  color: rgb(215, 215, 215);
+  background-color: #e76f51 !important;
+}
+
+.logarForm p {
+  color: rgb(215, 215, 215);
+  font-size: 0.9rem;
+}
+
+.logarForm:hover {
+  background-color: #2a4f5e;
+}
+
+/* CONTACTO PAGE */
+
+.form-contacto {
+  color: rgb(215, 215, 215);
+  margin: 5px 5px !important;
+  padding: 15px 18px;
+  background-color: #264653;
+  border: 5px outset #e76f51;
+  border-radius: 6px 6px 6px 6px;
+
+  -webkit-box-shadow: -5px 6px 15px 9px #264653;
+  box-shadow: -5px 6px 15px 9px #264653;
+}
+
+.form-contacto .add-btn {
+  margin-top: 10px;
+  color: rgb(215, 215, 215);
+  background-color: #2a9d8f;
 }
