--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -5,16 +5,16 @@
     <div class="col-lg-2"></div>
 
     <div class="col-lg-8 my-3">
-      <h1 class="text-center">Criar conta ou Login</h1>
-      <p class="text-center lead">Faça login ou crie sua conta abaixo</p>
+      <h1 class="text-center pg-title">Criar conta ou Login</h1>
+      <p class="text-center p-title">Faça login ou crie sua conta abaixo</p>
 
       <%- include('includes/messages') %> 
       
-      <div class="row text-center">
+      <div class="row formContainer justify-content-center text-center">
 
-        <div class="col-6">
-          <h4>Crie sua conta</h4>
-          <p>se ainda nao tem conta crie uma, preencha o formulario:</p>
+        <div class="col-12 col-sm-5 criarForm">
+          <h4>Crie sua Conta</h4>
+          <p>se ainda nao tem conta crie uma</p>
           <form class="form-cadastro" action="/login/register" method="POST">
             <input type="hidden" name="_csrf" value= <%= csrfToken %> />
             <div class="form-group">
@@ -27,13 +27,13 @@
               <input type="password" class="form-control" name="password" />
               <small></small>
             </div>
-            <button type="submit" class="btn btn-primary">Criar Conta</button>
+            <button type="submit" class="btn">Criar Conta</button>
           </form>
         </div>
 
-        <div class="col-6">
-          <h4>Fazer Login</h4>
-          <p>se voçe ja tem conta, faça login abaixo:</p>
+        <div class="col-12 col-sm-5 logarForm">
+          <h4>Fazer seu Login</h4>
+          <p>se voçe ja tem conta, faça login</p>
           <form class="form-login" action="/login/login" method="POST">
             <input type="hidden" name="_csrf" value= <%= csrfToken %> /> 
             <div class="form-group">
@@ -46,7 +46,7 @@
               <input type="password" class="form-control" name="password" />
               <small></small>
             </div>
-            <button type="submit" class="btn btn-primary">login</button>
+            <button type="submit" class="btn">login</button>
           </form>
         </div>
       </div>
